<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_first_name"
        android:layout_width="@dimen/zero_layout_width_chain"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:hint="@string/first_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edit_text_last_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_last_name"
        android:layout_width="@dimen/zero_layout_width_chain"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginEnd="@dimen/eight_margin"
        android:hint="@string/last_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_text_first_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginTop="@dimen/fifty_margin"
        android:layout_marginEnd="@dimen/eight_margin"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_first_name" />

    <TextView
        android:id="@+id/text_view_date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifty_margin"
        android:text="@string/text_view_dob"
        android:textAlignment="center"
        android:textSize="@dimen/eighteen_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_email" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_hundred_thirty_margin"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginEnd="@dimen/eight_margin"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:endYear="2019"
        android:startYear="1900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_date_label" />

    <TextView
        android:id="@+id/text_view_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginTop="@dimen/one_hundred_thirty_margin"
        android:text="@string/text_view_gender"
        android:textAlignment="center"
        android:textSize="@dimen/eighteen_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/date_picker" />

    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty_margin"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_view_gender_label">

        <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/thirty_margin"
            android:text="@string/radio_button_female" />

        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_male" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_text_address_one"
        android:layout_width="@dimen/zero_layout_width_chain"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginTop="@dimen/thirty_margin"
        android:hint="@string/address_one_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintRight_toLeftOf="@+id/edit_text_address_two"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/radio_group_gender" />

    <EditText
        android:id="@+id/edit_text_address_two"
        android:layout_width="@dimen/zero_layout_width_chain"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginTop="@dimen/thirty_margin"
        android:layout_marginEnd="@dimen/eight_margin"
        android:hint="@string/address_two_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_text_address_one"
        app:layout_constraintTop_toTopOf="@id/radio_group_gender" />

    <EditText
        android:id="@+id/edit_text_county"
        android:layout_width="@dimen/zero_layout_width_chain"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginTop="@dimen/fifty_margin"
        android:hint="@string/address_three_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintRight_toLeftOf="@id/edit_text_eircode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_address_one" />

    <EditText
        android:id="@+id/edit_text_eircode"
        android:layout_width="@dimen/zero_layout_width_chain"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginTop="@dimen/fifty_margin"
        android:layout_marginEnd="@dimen/eight_margin"
        android:hint="@string/address_four_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text_county"
        app:layout_constraintTop_toTopOf="@id/edit_text_address_two" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixty_margin"
        android:background="@color/red"
        android:text="@string/register_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_county" />
</android.support.constraint.ConstraintLayout>